--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 2.6)
 
-project(libconfuse++ CXX)
+project(<project_name> CXX)
 
 option(BUILDING_TEST "Build tests" ON)
 
@@ -12,10 +12,13 @@ add_definitions(-g)
 file(GLOB_RECURSE SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp")
 include_directories("${CMAKE_CURRENT_SOURCE_DIR}/include")
 
-include(CMakeLists-libconfuse.cmake)
+# add dependencies
+# include(CMakeLists-libconfuse.cmake)
 
+# add output library
 add_library(confuse++ ${SOURCES})
-add_dependencies(confuse++ libconfuse)
+
+# add_dependencies(confuse++ libconfuse)
 
 if(BUILDING_TEST)
     enable_testing()
